--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "koishi-plugin-filter-pro",
   "description": "Ruleset middleware plugin for Koishi",
   "version": "2.3.17",
-  "main": "lib/index.cjs",
-  "module": "lib/index.mjs",
-  "types": "lib/index.d.ts",
-  "type": "module",
+  "typings": "lib/index.d.ts",
+  "main": "lib/index.js",
   "exports": {
     ".": {
       "types": "./lib/index.d.ts",
@@ -53,6 +51,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.14",
+    "@koishijs/client": "^5.11.0",
     "@koishijs/plugin-console": "^5.30.11",
     "@koishijs/plugin-proxy-agent": "^0.3.3",
     "@types/node": "^25.2.1",
