--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-filter-pro",
-  "description": "Ruleset middleware plugin for Koishi",
-  "version": "1.0.3",
+  "description": "A powerful filter plugin for Koishi",
+  "version": "1.0.4",
   "main": "lib/index.cjs",
   "module": "lib/index.mjs",
   "types": "lib/index.d.ts",
@@ -52,14 +52,14 @@
     "koishi": "^4.18.10"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.14",
-    "@koishijs/client": "^5.11.0",
+    "@biomejs/biome": "^2.4.4",
+    "@koishijs/client": "^5.30.11",
     "@koishijs/plugin-console": "^5.30.11",
     "@koishijs/plugin-proxy-agent": "^0.3.3",
-    "@types/node": "^25.2.1",
+    "@types/node": "^25.3.0",
     "@vitejs/plugin-vue": "^6.0.4",
     "koishi": "^4.18.10",
-    "rolldown": "^1.0.0-rc.3",
+    "rolldown": "^1.0.0-rc.5",
     "rolldown-plugin-dts": "^0.22.1"
   }
 }
