chore(package): update version and contributor list

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-filter-pro",
   "description": "A powerful filter plugin for Koishi",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "main": "lib/index.cjs",
   "module": "lib/index.mjs",
   "types": "lib/index.d.ts",
@@ -25,6 +25,10 @@
     "lint": "biome check && biome lint",
     "lint-fix": "biome format --write && biome lint --write"
   },
+  "contributors": [
+    "q78kg <hoshino-yumetsuki@outlook.com>",
+    "shangxueink <1919892171@qq.com>"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hoshino-Yumetsuki/koishi-plugin-filter-pro",
